--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vite": "^6.0.7"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "6.7.1",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "file-upload-with-preview": "^6.1.2",
     "gsap": "^3.12.5"
   }
