--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,15 @@
 [build]
   command = "yarn build"
-  publish = "frontend/dist"
+  publish = "dist"
   
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
+  status = 200
+  
+//redirecciones del backend
+[[redirects]]
+  from = "/upload"
+  to = "https://tatapiri.glitch.me/upload"
   status = 200
