--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tata-piriri",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,10 +15,23 @@
     "@fortawesome/fontawesome-free": "6.7.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@popperjs/core": "^2.11.8",
-    "@sendgrid/mail": "^8.1.4",
     "bootstrap": "^5.3.3",
+    "express": "^4.21.2",
     "file-upload-with-preview": "^6.1.2",
     "gsap": "^3.12.5",
     "split-type": "^0.3.4"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lacoque/Tata-Piriri.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lacoque/Tata-Piriri/issues"
+  },
+  "homepage": "https://github.com/Lacoque/Tata-Piriri#readme",
+  "description": ""
 }
